# crinit

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .style.yapf  API-Doc.html  API-Doc.rst  CMakeLists.txt  Doxyfile  Doxyfile.in  Jenkinsfile  Makefile  README.html  README.md  commitlint.config.js  conf.py  crinit_0.14.12.orig.tar.xz.delta  crinit_0.14.12.orig.tar.xz.id  crinit_0.14.13.orig.tar.xz.delta  crinit_0.14.13.orig.tar.xz.id  crinit_0.14.6.orig.tar.gz.delta  crinit_0.14.6.orig.tar.gz.id  crinit_0.14.9.orig.tar.xz.delta  crinit_0.14.9.orig.tar.xz.id  crinit_0.15.0.orig.tar.xz.delta  crinit_0.15.0.orig.tar.xz.id  crinit_0.15.1.orig.tar.xz.delta  crinit_0.15.1.orig.tar.xz.id  crinit_0.16.0.orig.tar.xz.delta  crinit_0.16.0.orig.tar.xz.id  crinit_0.16.1.orig.tar.xz.delta  crinit_0.16.1.orig.tar.xz.id  crinit_0.17.0.orig.tar.xz.delta  crinit_0.17.0.orig.tar.xz.id  crinit_0.17.1.orig.tar.xz.delta  crinit_0.17.1.orig.tar.xz.id  crinit_0.17.4.orig.tar.xz.delta  crinit_0.17.4.orig.tar.xz.id  crinit_0.18.2.orig.tar.xz.delta  crinit_0.18.2.orig.tar.xz.id  (+15 more)
.githooks/: commit-msg
src/: CMakeLists.txt  capabilities.c  cgroup.c  common.c  confconv.c  confhdl.c  confmap.c  confparse.c  crinit-client.c  crinit-ctl.c  crinit-launch.c  crinit-version.c.in  crinit.c  crinit_parsecheck.c  elos-common.c  elosdep.c  elosio.c  eloslog.c  envset.c  fseries.c  globopt.c  index.html  index.rst  ioredir.c  kcmdline.c  lexers.re  logio.c  machine-id-gen.c  minsetup.c  notiserv.c  optfeat.c  poweroff.c  procdip.c  reboot.c  rtimcmd.c  rtimopmap.c  sig.c  sockcom.c  task.c  taskconfmap.c  (+6 more)
test/demo/cgroup/: CMakeLists.txt  cgroup-demo.c
test/mocks/: CMakeLists.txt  Makefile  mock-build-rtim-cmd.c  mock-build-rtim-cmd.h  mock-calloc.c  mock-calloc.h  mock-closedir.c  mock-closedir.h  mock-crinit-xfer.c  mock-crinit-xfer.h  mock-destroy-rtim-cmd.c  mock-destroy-rtim-cmd.h  mock-dirfd.c  mock-dirfd.h  mock-envset-destroy.c  mock-envset-destroy.h  mock-envset-init.c  mock-envset-init.h  mock-err-print.c  mock-err-print.h  mock-errno-print.c  mock-errno-print.h  mock-free.c  mock-free.h  mock-fstatat.c  mock-fstatat.h  mock-glob-opt-set-boolean.c  mock-glob-opt-set-boolean.h  mock-glob-opt-set.c  mock-glob-opt-set.h  mock-malloc.c  mock-malloc.h  mock-opendir.c  mock-opendir.h  mock-realloc.c  mock-realloc.h  mock-scandir.c  mock-scandir.h  mock-set-err-stream.c  mock-set-err-stream.h  (+13 more)
test/utest/: CMakeLists.txt
test/utest-confconv-envset/: CMakeLists.txt  case-null-input.c  case-success.c  case-wrong-input.c  utest-confconv-envset.c  utest-confconv-envset.h
test/utest-envset-parse-and-set/: CMakeLists.txt  case-null-input.c  case-success.c  case-wrong-input.c  utest-envset-parse-and-set.c  utest-envset-parse-and-set.h
test/utest-lexers-envset-inner/: CMakeLists.txt  case-lexer-error.c  case-null-input.c  case-success.c  utest-lexers-envset-inner.c  utest-lexers-envset-inner.h
test/utest-lexers-envset-outer/: CMakeLists.txt  case-lexer-error.c  case-null-input.c  case-success.c  utest-lexers-envset-outer.c  utest-lexers-envset-outer.h
test/utest/mocks/: CMakeLists.txt  mock-cap_get_bound.c  mock-cap_get_bound.h  mock-cap_set_proc.c  mock-cap_set_proc.h  mock-close.c  mock-close.h  mock-closedir.c  mock-closedir.h  mock-crinit-xfer.h  mock-destroy-rtim-cmd.h  mock-dirfd.c  mock-errno-print.h  mock-free.c  mock-free.h  mock-getgrgid_r.c  mock-getgrgid_r.h  mock-getgrnam_r.c  mock-getgrnam_r.h  mock-getpwnam_r.c  mock-getpwnam_r.h  mock-getpwuid_r.c  mock-getpwuid_r.h  mock-glob-opt-set-boolean.h  mock-kill.c  mock-kill.h  mock-malloc.c  mock-malloc.h  mock-memset.c  mock-memset.h  mock-mkdirat.c  mock-mkdirat.h  mock-mount.c  mock-mount.h  mock-open.c  mock-open.h  mock-openat.c  mock-openat.h  mock-opendir.h  mock-prctl.c  (+18 more)
test/utest/utest-cfgmap-order/: CMakeLists.txt  regression-test.c  utest-cfgmap-order.h
test/utest/utest-cgroup-assign-pid/: CMakeLists.txt  case-open-fail.c  case-openat-fail.c  case-success.c  case-writev-fail.c  case-wrong-input.c  utest-cgroup-assign-pid.c  utest-cgroup-assign-pid.h
test/utest/utest-cgroup-configure/: CMakeLists.txt  case-mkdir-fail.c  case-open-fail.c  case-openat-fail.c  case-success.c  case-writev-fail.c  case-wrong-input.c  utest-cgroup-configure.c  utest-cgroup-configure.h
test/utest/utest-cgroup-crinit-cfg-cgroup-name-handler/: CMakeLists.txt  case-empty-input.c  case-null-input.c  case-success.c  utest-cgroup-crinit-cfg-cgroup-name-handler.c  utest-cgroup-crinit-cfg-cgroup-name-handler.h
test/utest/utest-cgroup-crinit-cfg-cgroup-params-handler/: CMakeLists.txt  case-empty-input.c  case-invalid-input.c  case-null-input.c  case-success.c  utest-cgroup-crinit-cfg-cgroup-params-handler.c  utest-cgroup-crinit-cfg-cgroup-params-handler.h
test/utest/utest-cgroup-crinit-convert-config-array-to-cgroup-configuration/: CMakeLists.txt  case-success.c  utest-cgroup-crinit-convert-config-array-to-cgroup-configuration.c  utest-cgroup-crinit-convert-config-array-to-cgroup-configuration.h
test/utest/utest-cgroup-crinit-global-name-handler/: CMakeLists.txt  case-empty-input.c  case-null-input.c  case-success.c  utest-cgroup-crinit-global-name-handler.c  utest-cgroup-crinit-global-name-handler.h
test/utest/utest-cgroup-crinit-global-params-handler/: CMakeLists.txt  case-empty-input.c  case-null-input.c  case-success.c  utest-cgroup-crinit-global-params-handler.c  utest-cgroup-crinit-global-params-handler.h
test/utest/utest-cgroup-crinit-root-name-handler/: CMakeLists.txt  case-empty-input.c  case-null-input.c  case-success.c  utest-cgroup-crinit-root-name-handler.c  utest-cgroup-crinit-root-name-handler.h
test/utest/utest-cgroup-crinit-root-params-handler/: CMakeLists.txt  case-empty-input.c  case-null-input.c  case-success.c  utest-cgroup-crinit-root-params-handler.c  utest-cgroup-crinit-root-params-handler.h
test/utest/utest-confconv-envset/: CMakeLists.txt  case-null-input.c
test/utest/utest-crinit-cap-convert-to-bitmask/: CMakeLists.txt  case-invalid-capability-name.c  case-success.c  utest-crinit-cap-convert-to-bitmask.c  (+1 more)
(+3176 files in other folders)
